# gsync

./: Cargo.toml  LICENSE
src/: commit.rs  config.rs  destination.rs  error.rs  gsync.rs  logger.rs  main.rs  utils.rs
