[package]
name = "gsync"
version = "1.0.0"
authors = ["Howard Zhu <zhc.howard@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1.4"
ssh2 = "0.8"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
log4rs = { version = "0.13", features = ["console_appender", "pattern_encoder"] }
indicatif = "0.15.0"
